# ai-terminal

./: Cargo.toml
src/: completions.rs  main.rs
