[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"